standards/gnds-2.0/try/c/src/v2.0/tsl/ThermalNeutronScatteringLaw.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ comment
// Constructs you're LESS likely to care about are preceded with:
//    // --- comment
// Anything not marked as above can be ignored by most users.
//
// ThermalNeutronScatteringLaw is the basic handle type in this file. Example:
//    // Create a default ThermalNeutronScatteringLaw object:
//    ThermalNeutronScatteringLaw handle = ThermalNeutronScatteringLawDefault();
// Functions involving ThermalNeutronScatteringLaw are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TRY_V2_0_TSL_THERMALNEUTRONSCATTERINGLAW
#define C_INTERFACE_TRY_V2_0_TSL_THERMALNEUTRONSCATTERINGLAW

#include "GNDStk.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct ThermalNeutronScatteringLawClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ ThermalNeutronScatteringLaw
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct ThermalNeutronScatteringLawClass *ThermalNeutronScatteringLaw;

// --- Const-aware handles.
typedef const struct ThermalNeutronScatteringLawClass *const ConstHandle2ConstThermalNeutronScatteringLaw;
typedef       struct ThermalNeutronScatteringLawClass *const ConstHandle2ThermalNeutronScatteringLaw;
typedef const struct ThermalNeutronScatteringLawClass *      Handle2ConstThermalNeutronScatteringLaw;
typedef       struct ThermalNeutronScatteringLawClass *      Handle2ThermalNeutronScatteringLaw;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstThermalNeutronScatteringLaw
ThermalNeutronScatteringLawDefaultConst();

// +++ Create, default
extern_c Handle2ThermalNeutronScatteringLaw
ThermalNeutronScatteringLawDefault();

// --- Create, general, const
extern_c Handle2ConstThermalNeutronScatteringLaw
ThermalNeutronScatteringLawCreateConst(
   const XMLName label,
   const XMLName href
);

// +++ Create, general
extern_c Handle2ThermalNeutronScatteringLaw
ThermalNeutronScatteringLawCreate(
   const XMLName label,
   const XMLName href
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
ThermalNeutronScatteringLawAssign(ConstHandle2ThermalNeutronScatteringLaw This, ConstHandle2ConstThermalNeutronScatteringLaw from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
ThermalNeutronScatteringLawDelete(ConstHandle2ConstThermalNeutronScatteringLaw This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
ThermalNeutronScatteringLawRead(ConstHandle2ThermalNeutronScatteringLaw This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
ThermalNeutronScatteringLawWrite(ConstHandle2ConstThermalNeutronScatteringLaw This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
ThermalNeutronScatteringLawPrint(ConstHandle2ConstThermalNeutronScatteringLaw This);

// +++ Print to standard output, as XML
extern_c int
ThermalNeutronScatteringLawPrintXML(ConstHandle2ConstThermalNeutronScatteringLaw This);

// +++ Print to standard output, as JSON
extern_c int
ThermalNeutronScatteringLawPrintJSON(ConstHandle2ConstThermalNeutronScatteringLaw This);


// -----------------------------------------------------------------------------
// Metadatum: label
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ThermalNeutronScatteringLawLabelHas(ConstHandle2ConstThermalNeutronScatteringLaw This);

// +++ Get
// +++ Returns by value
extern_c XMLName
ThermalNeutronScatteringLawLabelGet(ConstHandle2ConstThermalNeutronScatteringLaw This);

// +++ Set
extern_c void
ThermalNeutronScatteringLawLabelSet(ConstHandle2ThermalNeutronScatteringLaw This, const XMLName label);


// -----------------------------------------------------------------------------
// Metadatum: href
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
ThermalNeutronScatteringLawHrefHas(ConstHandle2ConstThermalNeutronScatteringLaw This);

// +++ Get
// +++ Returns by value
extern_c XMLName
ThermalNeutronScatteringLawHrefGet(ConstHandle2ConstThermalNeutronScatteringLaw This);

// +++ Set
extern_c void
ThermalNeutronScatteringLawHrefSet(ConstHandle2ThermalNeutronScatteringLaw This, const XMLName href);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif